k8s/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: "nextcloud-dmz"
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - image: nextcloud:29.0.7-apache
          imagePullPolicy: IfNotPresent
          name: nextcloud
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-data
              readOnly: false
            - mountPath: /mnt/data
              name: nextcloud-storage
              readOnly: false
      volumes:
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-app-pvc
        - name: nextcloud-storage
          nfs:
            server: 192.168.2.252
            path: "/mnt/tank/k8s/nextcloud/storage"
