k8s/nextcloud/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-postgresql
  namespace: "nextcloud-dmz"
  labels:
    app: postgresql
spec:
  ports:
    - port: 5432
  selector:
    app: postgresql
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: "nextcloud-dmz"
  labels:
    app: nextcloud
spec:
  ports:
    - port: 80
  selector:
    app: nextcloud
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-redis
  namespace: "nextcloud-dmz"
  labels:
    app: redis
spec:
  ports:
    - port: 6379
  selector:
    app: redis
