k8s/nextcloud/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud-gateway
  namespace: nextcloud-dmz
  annotations:
    nginx.org/client-max-body-size: "0"
spec:
  parentRefs:
  - name: gateway-external
    namespace: gateway
    sectionName: koryalbert-net
  hostnames:
  - "nextcloud.koryalbert.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nextcloud
      port: 80
